# ecostyles

./: .gitignore  README.md  RELEASING.md  ROADMAP.md  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
docs/: theming.md
notebooks/: README.md
scripts/: fetch_population.py  preview_themes.py  render_themes.py
specs/: README.md  cotd_example.json  gallery.py
src/ecostyles/: __init__.py  _version.py  styles.py
src/ecostyles/data/population/: population.csv
src/ecostyles/data/recessions/: recessions_uk.json  recessions_us.json
src/ecostyles/themes/: __init__.py  article.py  cotd.py  newsletter.py
src/ecostyles/utils/: __init__.py  file_operations.py  fonts.py  palette.py  population.py
tests/: test_file_operations.py  test_population.py  test_population_data.py  test_styles.py  test_theme_rendering.py  test_themes.py
