[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecostyles"
version = "0.1.2"
description = "Custom Altair themes and styling utilities"
readme = "README.md"
authors = [
    {name = "Josh Hellings"}
]
maintainers = [
    {name = "Josh Hellings"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "altair>=6.2.0",
    "pandas>=1.1.3",
    "vl-convert-python>=1.7.0",
    "country-converter>=1.0.0",
    "importlib-resources>=6.4.0; python_version < '3.10'"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/jhellingsdata/ecostyles"
Repository = "https://github.com/jhellingsdata/ecostyles.git"

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0"
]
dev = [
    "ipykernel>=6.0.0",   # run notebooks in notebooks/ against the project venv
    "nox>=2024.0.0"       # local multi-Python test runner (see noxfile.py)
]

[tool.setuptools.packages.find]
where = ["src"]

# Ship bundled data (fonts + reference datasets) inside the wheel.
[tool.setuptools.package-data]
ecostyles = ["data/**/*.otf", "data/**/*.ttf", "data/**/*.json"]
